# SWP-Tree-BG2

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
include/: helper.h  nvm_alloc.h  utils.h
include/alex/: alex.h  alex_nodes.h
include/apex/: apex.h  apex_nodes.h
include/fast-fair/: btree.h  btree_old.h
include/finedex/: aidel_model.h  aidel_model_impl.h  finedex.h  finedex_impl.h  function.h  level_bin.h  level_bin_con.h  lr_model.h  piecewise_linear_model.h  util.h
include/lbtree/: lbtree.h  lbtree_wrapper.hpp  mempool.h  tree.h
include/lipp/: lipp.h
include/xindex/: helper.h  xindex.h  xindex_buffer_impl.h  xindex_group.h  xindex_group_impl.h  xindex_impl.h  xindex_model.h  xindex_model_impl.h  xindex_root.h  xindex_root_impl.h  xindex_util.h
output/: swp-2000000-ycsb-write-.txt  swp-alex-llt-read-write-0.txt  swp-alex-llt.txt  swp-alex-ycsb-16-8.txt  swp-alex-ycsb-32-32.txt  swp-alex-ycsb-8-8.txt  swp-alex-ycsb-read-0.txt  swp-alex-ycsb-read-write-0.txt  swp-alex-ycsb-read_write-0.txt  swp-alex-ycsb-write-0.txt  swp-alex-ycsb.txt  swp-finedex-llt.txt  swp-lbtree-ycsb-write-1.txt  swp-lipp-llt-read-write-0.txt  swp-lipp-llt.txt  swp-lipp-ycsb-read-write-0.txt  swp-lipp-ycsb-write-0.txt  swp-lipp-ycsb.txt  swp-pgm-llt-read-write-0.txt  swp-pgm-llt.txt  swp-xindex-llt-read-write-0.txt  swp-xindex-llt.txt
output0/: swp-alex-llt.txt  swp-alex-ycsb-16-16.txt  swp-alex-ycsb-32-16.txt  swp-alex-ycsb-32-8.txt  swp-alex-ycsb-8-16.txt  swp-lipp-llt.txt
src/: clevel.h  combotree_config.h  enviroment.cc  lbtree.cc  lbtree_wrapper.cc  letree.h  pointer_bentry.h  tree.cc
tests/: db_interface.h  micro_bench_swp.cc  run_microbench_swp.sh
